fixed mobile sidebar close button alignment

--- a/src/components/css/Sidebar.css
+++ b/src/components/css/Sidebar.css
@@ -124,7 +124,7 @@
 }
 
 .hamburger.active span:nth-child(3) {
-  transform: rotate(-45deg) translate(7px, -6px);
+  transform: rotate(-45deg) translate(5px, -5px);
 }
 
 .mobile-overlay {
